add google verification of ownership to application.html.erb

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
 				the window is too small for it to appear on the right, is currently a mystery to me.
 			5. Should /shared/_menu.html.erb be included in individual templates:  home, category, product, company — rather than being included in application.html.erb?  div 'subcontainer' binds the menu and content in the main-content area together. ..  
 		-->
-	
+		<meta name="google-site-verification" content="DRniLxcdbLu-qb5STdNUxZI97IojXccx5-6mijdIhjI" />
 	  <title>TruMedical Solutions</title>
 		<%= stylesheet_link_tag "custom-theme/jquery-ui-1.8.10.custom.css" %>
 		
