--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -126,7 +126,30 @@
 	</div>
 
 	<!-- menu item: Search Box ————————————————— -->
-
+	
+	<div id="cse-search-form" style="width: 100%;">Loading</div>
+	<script src="http://www.google.com/jsapi" type="text/javascript"></script>
+	<script type="text/javascript"> 
+	  google.load('search', '1', {language : 'en'});
+	  google.setOnLoadCallback(function() {
+		var customSearchControl = new google.search.CustomSearchControl('000064363312609554513:jmpucuppl78');
+		customSearchControl.setResultSetSize(google.search.Search.FILTERED_CSE_RESULTSET);
+		var options = new google.search.DrawOptions();
+		options.enableSearchboxOnly("http://trumedical2.heroku.com/site/search");    
+		customSearchControl.draw('cse-search-form', options);
+	  }, true);
+	</script>
+	<link rel="stylesheet" href="http://www.google.com/cse/style/look/default.css" type="text/css" />
+	<style type="text/css">
+	  input.gsc-input {
+		border-color: #BCCDF0;
+	  }
+	  input.gsc-search-button {
+		border-color: #ff9900;
+		background-color: #ff9900;
+	  }
+	</style>
+	<!-- original mavics code:
 	<form id="search_form" action="/en/search/google_cse_adv" method="post" name="search_form">
 	  <script type="text/javascript" src="http://www.google.com/jsapi"></script> 
 	  <script type="text/javascript">
@@ -143,8 +166,10 @@
 	          search ...
 	      </h1><input class="" id="search_input" type="text" name="keys" value="" maxlength="30" autocomplete="off">
 	  </div><a class="submit" href="javascript:%20document.getElementById('search_form').submit();">OK</a> <input type="hidden" value="47064f86a9eb92a56d412fb061ca44a4" name="form_token"> <input type="hidden" value="search_form" id="edit-search-form" name="form_id">
-	  <div class="clear" style=""></div>
+	  <div class="clear" style=""></div>  
+	  
 	</form>
+	-->
 
 
 	
