--- a/app/views/shared/_menu_colored.html.erb
+++ b/app/views/shared/_menu_colored.html.erb
@@ -1,43 +1,53 @@
 <div id="menu">
 	<div class="menu_main">
 		<!-- menu item: MODALITIES ————————————————— -->
-		<a class="level1 helvetica first" href="#" id="modalities">Modalities</a>
+		<a class="level1 helvetica first" href="#" id="modalities">
+			<img src="/images/menus/square_red_16x16.gif">&nbsp;Modalities</a>
 		<div class="menu_separator"></div>
 
 		<!-- menu item: CLINICAL SUPPLIES ————————————————— -->
-		<a class="level1 helvetica" href="#" id="clinicalSupplies" >Clinical Supplies</a>
+		<a class="level1 helvetica" href="#" id="clinicalSupplies" >
+			<img src="/images/menus/square_purple_16x16.gif">&nbsp;Clinical Supplies</a>
 		<div class="menu_separator"></div>
 
 		<!-- menu item: TABLES & TRACTION ————————————————— -->
-		<a class="level1 helvetica" href="#" id="tables">Tables/Traction</a>
+		<a class="level1 helvetica" href="#" id="tables">
+			<img src="/images/menus/square_blue_16x16.gif">&nbsp;Tables/Traction</a>
 		<div class="menu_separator"></div>
 
 		<!-- menu item: FITNESS ————————————————— -->
-		<a class="level1 helvetica" href="#" id="fitness">Fitness</a>
+		<a class="level1 helvetica" href="#" id="fitness">
+			<img src="/images/menus/square_orange_16x16.gif">&nbsp;Fitness</a>
 		<div class="menu_separator"></div>
 
 		<!-- menu item: ORTHOPEDICS ————————————————— -->
-		<a class="level1 helvetica" href="#" id="orthopedics">Orthopedics</a>
+		<a class="level1 helvetica" href="#" id="orthopedics">
+			<img src="/images/menus/square_teal_16x16.gif">&nbsp;Orthopedics</a>
 		<div class="menu_separator"></div>
 
 		<!-- menu item: ACT/TAPING ————————————————— -->
-		<a class="level1 helvetica" href="#" id="taping">ATC/Taping</a>
+		<a class="level1 helvetica" href="#" id="taping">
+			<img src="/images/menus/square_fuscia_16x16.gif">&nbsp;ATC/Taping</a>
 		<div class="menu_separator"></div>
 
 		<!-- menu item: EVALUATION ————————————————— -->
-		<a class="level1 helvetica" href="#" id="evaluation">Evaluation</a>
+		<a class="level1 helvetica" href="#" id="evaluation">
+			<img src="/images/menus/square_green_16x16.gif">&nbsp;Evaluation</a>
 		<div class="menu_separator"></div>
 
 		<!-- menu item: DAILY LIVING AIDS ————————————————— -->
-		<a class="level1 helvetica" href="#" id="dailyLiving">Daily Living Aids</a>
+		<a class="level1 helvetica" href="#" id="dailyLiving">
+			<img src="/images/menus/square_rose_16x16.gif">&nbsp;Daily Living Aids</a>
 		<div class="menu_separator"></div>
 
 		<!-- menu item: LYMPHEDEMA  ————————————————— -->
-		<a class="level1 helvetica" href="#" id="lymphedema">Lymphedema</a>
+		<a class="level1 helvetica" href="#" id="lymphedema" name="menu_51010">
+			<img src="/images/menus/square_yellow_16x16.gif">&nbsp;Lymphedema</a>
 		<div class="menu_separator"></div>
 
 		<!-- menu item: WOUND CARE ————————————————— -->
-		<a class="level1 helvetica" href="javascript:void(0);" id="woundCare">Wound Care</a>
+		<a class="level1 helvetica" href="javascript:void(0);" id="woundCare">
+			<img src="/images/menus/square_brown_16x16.gif">&nbsp;Wound Care</a>
 		<div class="menu_separator"></div>
 
 		<!-- menu item: Search Box ————————————————— -->
