--- a/app/views/home/_subcategories.html.erb
+++ b/app/views/home/_subcategories.html.erb
@@ -1,13 +1,18 @@
 			<div class="subcategories">
+				
 				<% @category.children.each do |subcat| %>
+					
 					<!-- render a clickable partial that displays the subcategory image and name -->
+					
 					<div class="subcategory">
 						<%= image_tag("/images/categories/" + subcat.image_filename + ".jpg", :size => "120x80",:style => "float:left;") %>
+						
 						<div class="subcategoryName">
-							<%= subcat.name %>
-							<%# link_to(subcat.name, category_path(subcat)) %>
+							<%= link_to(subcat.name, { :controller => "categories", :action => "show", :id => subcat.id } ) %>
 						</div>
+						
 					</div> <!-- end div.subcategory --> 
+					
 				<% end %>
 
 			</div><!-- end div.subcategories --> -
