--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -11,15 +11,14 @@ Doc: home page for the site
 
 ToDo:
 	1. Implement popup displays for 2ndary nav
-		 1.1 lymphedema popup coming up without any content
 		 1.2 setup of @category variable within handlers for hovers on menu items not working properly
 		     — works if do @category = Category.where(:name => 'Modalities').first for all of them, but
-						not if put in correct where clauses on categories after Modalities.  Notice black dots 
-						beyond thumbnails for Modalities subcategories in all of the subsequent subcategories
-						(but not in Modalities) 
+						not if put in correct where clauses on categories after Modalities.  However: Notice 	
+						black dots beyond thumbnails for Modalities subcategories in all of the subsequent
+						subcategories. (but not in Modalities). Could problem 1.2 be related to 1.3? 
 		 1.3 link_to in the partial /views/home/_subcategories.html.erb does not work — attempting to 
 					find a category_path(@category) for an array of categories, not a single category.  Why? 
-	2. extract left-nav into a partial:
+	2. extract left-nav into a partial: shared/_menu
 		1. one for the home page with TruMedical, patients, payers, ...; one for other pages without 
 		2. variants of each with and without the colored blocks 
 	3. extract home_right_content_container into a partial (more appropriate name, or does that risk messing up code that dynamically changes the location of this div on the page?  Leave it for now, 
@@ -37,7 +36,6 @@ Known Bugs:
 	1. when hover over a subcategory, it highlights properly, but highlight needs to be removed from other subcategories
 	2. links in subcategory partial views/home/_subcategories are not working: don't compile
 	3. attempt to set @category in the on-hover handlers defined in jQuery on-page-ready are not working
-	4. lymphedema popup is not working; display comes up, but no content 
 	
 	1. not enough vertical space for product menu, search, TruMedical, ppp; 2 boxes; 
 	solution: move search to upper right under register/login cart/checkout links  
@@ -91,19 +89,16 @@ Unknowns:
 
 	<script type="text/javascript">
 			$(document).ready(function(){
-				initHome();
+				/*initHome(); */
 			});	
 	</script>	
 	<style type="text/css">
 		#popupsContainer { 
 			position: absolute; 
 			top:40px; left:230px; 
-			width: 700px;
-			
-			background-color:pink;
+			width: 700px;			
 			z-index:100;
-		}
-			
+		}		
 		.popup_base { 
 			position:absolute; /* within popupsContainer */ 
 			left: 20px; width:100%; 
@@ -120,7 +115,7 @@ Unknowns:
 		#popup_taping {top:150px;z-index:10001; }
 		#popup_evaluation {top:184px;z-index:10001; }
 		#popup_dailyLiving {top:220px;z-index:10001; }
-		#popup_lymphedema {top:254px;z-index:10001; }
+		#popup_lymphedema {top:254px;z-index:10001; } 
 		#popup_woundCare {top:290px;z-index:10001; }
 		
 		#popup_trumedical {top:324px;z-index:10001; background-color:#0094DE; color:white; }
@@ -129,7 +124,8 @@ Unknowns:
 		#popup_providers {top:394px; z-index:10001;background-color:orange;}
 		#popup_payors {top:430px; z-index:10001;background-color:orange;}
 		div.subcategories { }
-		div.subcategory {width: 120px; margin-right:10px; margin-bottom:10px; float:left; height:120px; }
+		div.subcategory {width: 120px; margin-right:10px; margin-bottom:10px; float:left; height:120px;
+			background-color:#E6E6E6;}
 		div.subcategoryName { padding:5px;margin:0;text-align:center;}
 
 	
@@ -228,8 +224,12 @@ Unknowns:
 					return false;
 				})
 				
-				$("div.subcategory").hover(function(){
-					$(this).css('background-color','orange');
+
+				$(".subcategory").mouseenter(function(){
+					$(this).css("background-color","orange");
+				});
+				$(".subcategory").mouseleave(function(){
+					$(this).css("background-color","#E6E6E6");
 				});
 				/* if click on this subcategory, link to subcategory landing page. 
 					How get correct subcategory? */
@@ -478,21 +478,7 @@ Unknowns:
 			<!-- Modalities  popup ———————————————————————————————————————————————-->
 
 			<div id="popup_modalities" class="popup_base">
-				
-				<div class="subcategories">
-					
-					<% @category.children.each do |subcat| %>
-						<!-- render a clickable partial that displays the subcategory image and name -->
-						<div class="subcategory">
-							<%= image_tag("/images/categories/" + subcat.image_filename + ".jpg", :size => "120x80",:style => "float:left;") %>
-							<div class="subcategoryName">
-								<%= subcat.name %>
-								<%# link_to(subcat.name, category_path(subcat)) %>
-							</div>
-						</div> <!-- end div.subcategory --> 
-					<% end %>
-
-				</div><!-- end div.subcategories --> 
+				<%= render "subcategories" %>		
 			</div> <!-- end div#popup_modalities -->
 			
 			<!-- Clinical Supplies  popup ————————————————————————————————————————-->
@@ -531,7 +517,8 @@ Unknowns:
 			</div>
 			
 			<!-- Lymphedema  popup ———————————————————————————————————————————————-->
-			<div id="popup_lymphedema" class="popup_base">  
+			<div id="popup_lymphedema" class="popup_base"> 
+				<%= render "subcategories" %>  
 			</div>
 			
 			<!-- Wound Care  popup ———————————————————————————————————————————————-->
