--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -5,14 +5,14 @@
 					Category#show
 					
 				—————————————————————————————————————————————————————————————————————————————————————————	
-        to do:
-	
+        
+				to do:
 					1. Use /shared/_menu.html.erb for menu  [DONE]
-					2. 
-					3. Create partial for right_content
-					3. Create rails code that iterates through products for this leaf-level category
-					4. create controllers/actions for category#display, product#display
-					5. factor mavic css file [DONE]    
+					2. Create code that iterates through leaf-level categories for this subcategory [DONE]
+				
+				bugs:
+					alignment of subcategories
+
             
         open questions:
 					1. Background image for modalities — or just a color block?  
@@ -26,12 +26,9 @@
 					4. Need to understand how the code is moving right_content from right to left under menu if page is too narrow. This works here, in mavic_llc.html  but not in mav0llc_3.html, where it drops below the main block also. Even on this page, works on Safari, but drops below left on Firefox.
 						— If left it on left in all pages, then it would not interfere with upper right links
 						to Netsuite. 
-						
-				problems
-					1. the register/login checkout/cart search stuff on upper right — should it be here? 
 					
-				refactoring:    
-					1. Consider using HTML5 'semantic' sections, SASS      
+				refactoring:
+					1. Create partial for right_content and replace it in all templates with a render <partial>
             
         —————————————————————————————————————————————————————————————————————————————————————————
     -->
@@ -54,6 +51,12 @@
 				var itemtimer=new Array();
 				
 		</script>
+		<style type="text/css">
+			div.leafCategories { margin-top:20px;}
+			div.leafCategory {width: 120px; margin-right:10px; margin-bottom:10px; float:left; height:120px;
+				background-color:#E6E6E6;}
+			div.leafCategoryName { padding:5px;margin:0;text-align:center;}
+		</style>
   
 	<% end %>
 
@@ -143,26 +146,11 @@
 						<div class="clear"></div>
 
 						
-						<!-- SUBCATEGORIES  ———————————————————————————————————————————————————————————— -->
+						<!-- (Leaf-level) SUBCATEGORIES  ———————————————————————————————————————————————— -->
 
+						<%= render "leafCategories" %>
 						
-						<div class="subcategories">
-
-							<% @category.children.each do |subcat| %>
-								<!-- render a clickable partial that displays the subcategory image and name -->
-								<div class="subcategory">
-									<%= image_tag("/images/categories/" + subcat.image_filename + ".jpg", :size => "120x80",:style => "float:left;") %>
-									<div class="subcategoryName">
-										<%= subcat.name %>
-										<%# link_to(subcat.name, category_path(subcat)) %>
-									</div>
-								</div> <!-- end div.subcategory --> 
-							<% end %>
-
-						</div><!-- end div.subcategories -->
-						
-						
-	                    
+                
 						<div class="clear"></div>
                     
 					</div> <!-- end div 'tabs' -->
