--- a/app/views/home/_subcategories.html.erb
+++ b/app/views/home/_subcategories.html.erb
@@ -1,22 +1,17 @@
-			<div class="subcategories">
-				
-				<% @category.children.each do |subcat| %>
-					
-					<!-- render a clickable partial that displays the subcategory image and name -->
-					
-					<div class="subcategory">
-						<%= image_tag("/images/categories/all/" + subcat.image_filename + ".jpg", :size => "120x80",:style => "float:left;") %>
-					
+<div class="subcategories">
 	
-						<div class="subcategoryName">
-					
-							<%= link_to(subcat.name, { :controller => "categories", :action => "show", :id => subcat.id } ) %>
-						
-						<!-- <%# subcat.name %>  -->
-						</div>
+	<% @category.children.each do |subcat| %>
+		
+		<!-- render a clickable partial that displays the subcategory image and name -->
+		
+		<div class="subcategory">
+			<a href='<%= category_path(subcat.id) %>'>
 
-					</div> <!-- end div.subcategory --> 
-					
-				<% end %>
+				<%= image_tag("/images/categories/all/" + subcat.image_filename + ".jpg", :size => "120x80",:style => "float:left; border:0;") %>
+				<div class="subcategoryName"><%= subcat.name %></div>
+			</a>
+		</div> <!-- end div.subcategory --> 
+		
+	<% end %>
 
-			</div><!-- end div.subcategories --> -
+</div><!-- end div.subcategories --> -
