--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -132,6 +132,7 @@ Unknowns:
 			background-color:#E6E6E6;}
 		div.subcategoryName { padding:5px;margin:0;text-align:center;}
 		div.subcategory { border: 1px solid gainsboro; }
+		div.subcategory a:hover { color:white;}
 
 	
 	</style>
@@ -218,20 +219,39 @@ Unknowns:
 					$("#popup_payors").show();
 					return false;
 				})
-				
 
+			});
+		</script>
+		
+		<script type ="text/javascript">
+			$(document).ready(function(){
+				/* If mouseover a subcategory block within one of the popup windows, 
+				the background of the entire block turns orange. 
+				But because top 80px of 120x120 block is covered by 120x80px image, it looks
+				like it is just the bottom 40px that turns orange.  
+				*/
 				$(".subcategory").mouseenter(function(){
 					$(this).css("background-color","orange");
 				});
 				$(".subcategory").mouseleave(function(){
 					$(this).css("background-color","#E6E6E6");
 				});
-				/* if click on this subcategory, link to subcategory landing page. 
-					How get correct subcategory? */
+				/* If click anywhere on this subcategory div, link to subcategory landing page. 
+					How get correct subcategory? 
+					Currently using an href within the subcategory div, using Rails to insert the target url. 
+					Is there an entirely Rails answer — using a link_to(content_tag ... ? 
+				*/
+				/*
+				$(".subcategory").click(function(){
+						window.location.href="http://localhost:3000/categories/2" 
+						return false;
+				});
+				*/
 
 			});
 
 		</script>
+		
 
 	
 
